mobile: setup scorm viewer

--- a/mobile/app.json
+++ b/mobile/app.json
@@ -25,6 +25,9 @@
       "output": "static",
       "favicon": "./assets/images/favicon.png"
     },
+    "assetBundlePatterns": [
+      "assets/scorm/**"
+    ],
     "plugins": [
       "expo-router",
       [
